[Views] Center bubble title text vertically when title icon is tall.

BUG=608274

Review-Url: https://codereview.chromium.org/1950863002
Cr-Commit-Position: refs/heads/master@{#391592}

Former-commit-id: 7348b202e0b2c02f7fab1fc03b6f9e7b84d83c1c